--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,8 +9,22 @@ spring:
     password: Manoj@1998
     driver-class-name: com.mysql.cj.jdbc.Driver
 
+  application:
+    name: user-services
+
 
   jpa:
     hibernate:
       ddl-auto: update
     show-sql: true
+
+
+eureka:
+  instance:
+    prefer-ip-address: true
+    appname: ${spring.application.name}
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka
