--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,21 +10,22 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   application:
-    name: user-services
-
+    name: USER-SERVICE
 
   jpa:
     hibernate:
       ddl-auto: update
     show-sql: true
 
+  config:
+    import: optional:configserver:http://localhost:8085
 
-eureka:
-  instance:
-    prefer-ip-address: true
-    appname: ${spring.application.name}
-  client:
-    fetch-registry: true
-    register-with-eureka: true
-    service-url:
-      defaultZone: http://localhost:8761/eureka
+#eureka:
+#  instance:
+#    prefer-ip-address: true
+#    appname: ${spring.application.name}
+#  client:
+#    fetch-registry: true
+#    register-with-eureka: true
+#    service-url:
+#      defaultZone: http://localhost:8761/eureka
