--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,12 +20,43 @@ spring:
   config:
     import: optional:configserver:http://localhost:8085
 
-#eureka:
-#  instance:
-#    prefer-ip-address: true
-#    appname: ${spring.application.name}
-#  client:
-#    fetch-registry: true
-#    register-with-eureka: true
-#    service-url:
-#      defaultZone: http://localhost:8761/eureka
+
+management:
+  health:
+    circuitbreakers:
+      enabled: true
+  endpoints:
+    web:
+      exposure:
+        include: health
+  endpoint:
+    health:
+      show-details: always
+
+
+resilience4j:
+  circuitbreaker:
+    instances:
+      ratingHotelBreaker:
+        registerHealthIndicator: true
+        eventConsumerbufferSize: 10
+        failureRateThreshold: 50
+        minimumNumberoOfCalls: 5
+        automaticTransititonFromOpenToHalfOpenEnabled: true
+        waitDurationInOpenState: 6s
+        permittedNumberOfCallsInHalfOpenState: 3
+        slidingWindowSize: 10
+        slidingWindowType: COUNT_BASED
+
+  retry:
+    instances:
+      ratingHotelBreaker:
+        max-attempts: 3
+        wait-duration: 5s
+
+  ratelimiter:
+    instances:
+      userRateLimiter:
+        limit-refresh-periods: 4s
+        limit-for-period: 2
+        timeout-duration: 2s
